2013-07-02  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #49397: No method name 'selectItemsTCA' in class tx_staticinfotables_div
	* Follow-up to #49397: Correction to the manual
	* Cleanup unescaped backslashes
	* Correction to the manual

2013-06-26  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #49462: Class tx_staticinfotables_pi1 not always available
	* Resolves #49463: Make extension version available to other extensions

2013-06-17  Stanislas Rolland  <typo3@sjbr.ca>

	* Update version to 6.0.4

2013-06-14  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #49124: Automated PHP Syntax check on LanguagePackTemplates fails
	* Resolves #49142: Add a method to Language Repository

2013-06-06  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to #48814: Records labels missing in list view using PHP 5.4 (Thanks to Visay Keo)

2013-06-04  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #48814: Records labels missing in list view using PHP 5.4 (Thanks to Visay Keo)

2013-05-31  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #48659: Superfluous closing ">" in pi1/class.tx_staticinfotables_pi1.php
	* Update version to 6.0.3

2013-05-25  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #48524: Missing file Classes/Domain/Model/LanguageExtensible.php
	* Resolves #48528: Error in update script on TYPO3 6.1.1
	* Update version to 6.0.1

2013-05-23  Stanislas Rolland  <typo3@sjbr.ca>

	* Fix extended domain model classes loading after class loader cache is cleared
	* Improve class cache handling
	* Relax extension conflicts
	* Update manual
	* GeneralUtility::loadTCA is deprecated in TYPO3 6.1
	* Follow-up to GeneralUtility::loadTCA is deprecated in TYPO3 6.1

2013-05-22  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #48473: Add action to test localization after installation of language pack
	* Fix language pack update

2013-05-21  Stanislas Rolland  <typo3@sjbr.ca>

	* Log usage of deprecated functions
	* Set TYPO3 version constraint to 6.0.6-6.1.99