@@ -1,3 +1,7 @@
+2013-07-15  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Resolves #50034: Re-introduce tx_staticinfotables_div::getTitleFromIsoCode as deprecated method
+
 2013-07-02  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Resolves #49397: No method name 'selectItemsTCA' in class tx_staticinfotables_div
